--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -e .
   - pip install pytest pytest-cov
 script: 
-  - pytest --cov=usualsuspects
+  - pytest --cov=protclus
 after_script: 
   - cd ~
   - codecov
